# CRAB

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  PLAN_CINETIC_REFACTOR.md  PLAN_RESULT_ANALYZER.md  README.md  blink_plotter.py  cli.py  presets.json  pyproject.toml  topology_parser.py  tournament_analyzer.py  tui.py
benchmarks/blink/: common.h  tournament_nb.c
src/cinetic/: __main__.py  compat.py  runtime.py
src/cinetic/analysis/: cli.py  metrics.py  outliers.py  report_plot.py  report_text.py  topo.py
src/cinetic/cli/: orchestrator.py
src/cinetic/core/: engine.py  models.py
src/cinetic/tui/: app.py  (+3 more)
tests/: test_engine_nodelist.py  test_runtime_context.py  test_topology_map_screen.py  test_topology_parser.py
tests/fixtures/: example_ibnetdiscover.txt
topologies/: example.json
wrappers/: a2a_b.py  a2a_comm_only.py  a2a_man.py  a2a_nb.py  agtr_comm_only.py  amg.py  ardc_b.py  ardc_nb.py  barrier.py  bdc_b.py  bdc_nb.py  bursty_noise_a2a.py  bursty_noise_incast.py  checker.py  dnn-proxies-cosmoflow.py  dnn-proxies-dlrm.py  dnn-proxies-gpt3.py  dnn-proxies-gpt3_moe.py  dnn-proxies-resnet_scal.py  ember-halo3d-26.py  ember-halo3d.py  ember-incast.py  ember-pingpong.py  ember-sweep3d.py  g500.py  gpubench-a2a-baseline.py  gpubench-a2a-cudaaware.py  gpubench-a2a-nccl.py  gpubench-a2a-nvlink.py  gpubench-ar-baseline.py  gpubench-ar-cudaaware.py  gpubench-ar-nccl.py  gpubench-ar-nvlink.py  gpubench-comm-cudaaware.py  gpubench-comm-nccl.py  gpubench-hlo-baseline.py  gpubench-hlo-cudaaware.py  gpubench-hlo-nccl.py  gpubench-inc-nccl.py  gpubench-mpp-baseline.py  (+31 more)
(+34 files in other folders)
